--- a/Tp7-ejB.html
+++ b/Tp7-ejB.html
@@ -62,6 +62,10 @@
         gap: 20px;
         justify-content: center;
     }
+    a {
+        text-decoration: none;
+        color: black;
+    }
 
     .lista-susc {
         display: flex;
@@ -140,9 +144,8 @@
                 </ul>
             </nav>
             <div class="buscador">
-                <input type="search" placeholder="Buscar"  >
+                <input type="search" placeholder="Buscar">
                 <img src="bolsa.png" alt="bolsa">
-
             </div>
 
         </div>
